# esp32c3-rgb

./: Cargo.toml  esp32c3-rgb.code-workspace
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
