[package]
name = "esp32c3_rgb"
version = "0.1.0"
authors = ["atboxshop <atboxshop@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "1.0.0"
hal = { package = "esp32c3-hal", version = "0.7.0" }
esp-backtrace = { version = "0.5.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println       = { version = "0.3.1", features = ["esp32c3"] }
esp-hal-common = {version = "0.7.1", features = ["smartled"]}
smart-leds        = "0.3.0"
